--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,8 +10,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="br.com.ruitercomp.mymvpsample.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:context="br.com.ruitercomp.mymvpsample.LoginActivity"
+    tools:showIn="@layout/activity_login">
 
     <EditText
         android:layout_width="wrap_content"
